fix spacing error

--- a/src/component/customLetter/index.scss
+++ b/src/component/customLetter/index.scss
@@ -5,3 +5,9 @@
   align-items: center;
   gap: 16px;
 }
+
+.custom-letter__horizontal-spacer {
+  width: 100%;
+  flex-shrink: 0;
+  pointer-events: none;
+}
