--- a/src/component/customLetter/letterDeliver/index.scss
+++ b/src/component/customLetter/letterDeliver/index.scss
@@ -5,11 +5,11 @@
   overflow: visible;
   background: linear-gradient(
     180deg,
-    rgba(255, 245, 250, 0) 0%,
-    rgba(255, 226, 235, 0.78) 24%,
-    rgba(255, 205, 222, 0.96) 50%,
-    rgba(255, 226, 235, 0.78) 76%,
-    rgba(255, 245, 250, 0) 100%
+    rgba(255, 153, 51, 0) 0%,
+    rgba(255, 153, 51, 0.15) 24%,
+    rgba(255, 153, 51, 0.3) 50%,
+    rgba(255, 153, 51, 0.15) 76%,
+    rgba(255, 153, 51, 0) 100%
   );
   height: 220vh;
   padding-top: 8vh;
